--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "https://asotikovasvetlana.github.io/netcoin-exchange",
+  "private": true,
   "scripts": {
     "start": "nodemon index.js"
   },
